Fixed a network file loading issue.

--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="https://unpkg.com/num-client/web/num-client-latest.js"></script>
+  <script src="../web/num-client-latest.js"></script>
   <h1>NUM Protocol Example</h1>
   <h2>NUM URI = 'num.uk:1'</h1>
     <div style="border: 1px solid blue;width: fit-content;">
