Add support for the test environment.

--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
 
           const client = num.createClient();
           const ctx = client.createContext(numUri);
+          client.setenv(null);
 
           return client.retrieveNumRecord(ctx);
         }
