Fix usage of object-unpacker.

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <script src="../web/num-client-latest.js"></script>
   <h1>NUM Protocol Example</h1>
   <div>
-    NUM URI = <input type="text" value="numexample.com:1" id='urivalue' onchange="reloadRecord()">
+    NUM URI = <input type="text" value="num.uk:1" id='urivalue' onchange="reloadRecord()">
     <input type="button" value="Reload" onclick="reloadRecord()">
   </div>
   <div style="border: 1px solid blue;width: fit-content;">
