--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="../web/num-client-latest.js"></script>
+  <script src="../dist/bundle.js"></script>
   <h1>NUM Protocol Example</h1>
   <div>
     NUM URI = <input type="text" value="num.uk:1" id='urivalue' onchange="reloadRecord()">
@@ -18,12 +18,12 @@
   </div>
   <script>
 
-    const num = require('num-client');
-    const client = num.createClient();
+    const client = NumClient.createClient();
     client.setenv('test');
 
+
     function lookup(uri) {
-      const numUri = num.parseNumUri(uri);
+      const numUri = NumClient.parseNumUri(uri);
 
       const ctx = client.createContext(numUri);
 
