Better support for different environments.

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,8 @@
   <script>
 
     const client = NumClient.createClient();
+    //client.setDnsEnv('test');
+    //client.setModuleEnv('test');
     client.setenv('test');
 
 
