--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
     const client = NumClient.createClient();
     //client.setDnsEnv('test');
     //client.setModuleEnv('test');
-    client.setenv('test');
+    //client.setenv('test');
 
 
     function lookup(uri) {
