--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
   <script>
 
     const CUSTOM_RESOLVERS = [
-      new NumClient.DoHResolver('BAD', 'https://jhsgfdjhsgdkweg32767236eddghagsf.com/dns-query'),
+      //new NumClient.DoHResolver('BAD', 'https://jhsgfdjhsgdkweg32767236eddghagsf.com/dns-query'),
       new NumClient.DoHResolver('Cloudflare', 'https://cloudflare-dns.com/dns-query')
     ];
 
